--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' blob: data: https://*.supabase.co; connect-src 'self' ws: wss: https://*.supabase.co; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline'; font-src 'self' data:; base-uri 'self'; form-action 'self'"> 
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' blob: data:; connect-src 'self' ws: wss: http://localhost:3001 http://127.0.0.1:3001; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline'; font-src 'self' data:; base-uri 'self'; form-action 'self'"> 
   <meta http-equiv="Referrer-Policy" content="no-referrer" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SAMS — Smart Asset Management System</title>
     <meta name="description" content="SAMS centralizes asset lifecycle management with QR-enabled tracking, collaborative workflows, and audit-friendly reporting." />
-    <meta name="keywords" content="smart asset management system, qr asset labels, equipment management, supabase asset tracking, audit ready reporting, open source asset platform" />
+    <meta name="keywords" content="smart asset management system, qr asset labels, equipment management, asset tracking, audit ready reporting, open source asset platform" />
     <meta name="author" content="Karthik Lal" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1f2937" />
